Fix: scrollbars hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 html, body {
   background: #0e171d;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 /* App */
 .app {
@@ -7,16 +11,11 @@ html, body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 100vw;
-  margin: 0;
-  padding: 0;
-  overflow: auto;
+
 }
 
-/* Map */
-#map {
+#map{
   height: 95vh;
-  width: 100vw;
   overflow: auto;
 }
 
